* [BGBUILD-81] post command execution w/ setarch breaks commands which are scripts
* [BGBUILD-173] Include setarch package in default package list for RPM-based OSes
* [BGBUILD-177] Fedora 13 builds have enabled firewall although they shouldn't have it
* [BGBUILD-178] Remove sensitive data from logs
* [BGBUILD-179] Boolean and numeric parameters in hash-like values are not recognized

v0.8.1

* [BGBUILD-141] Long delay after "Preparing guestfs" message when creating new image
* [BGBUILD-150] Cyclical inclusion dependencies in appliance definition files are not detected/handled
* [BGBUILD-165] Use version in dependencies in gem and in RPM only where necessary

v0.8.0

* [BGBUILD-138] enablerepo path is not escaped when calling repoquery
* [BGBUILD-133] Support a consolidated configuration file
* [BGBUILD-128] Allow to specify plugin configuration using CLI
* [BGBUILD-134] Replace rubygem-commander with rubygem-thor
* [BGBUILD-131] Check if OS is supported before executing the plugin
* [BGBUILD-68] Global .boxgrinder/config or rc style file for config
* [BGBUILD-79] Allow to use BoxGrinder Build as a library
* [BGBUILD-127] Use appliance definition object instead of a file when using BG as a library
* [BGBUILD-72] Add support for growing (not pre-allocated) disks for KVM/Xen
* [BGBUILD-147] Allow to list installed plugins and version information

v0.7.1

* [BGBUILD-124] Guestfs fails while mounting multiple partitions with '_' prefix
* [BGBUILD-123] Remove RPM database recreation code

v0.7.0

* [BGBUILD-119] Fix SElinux issues on EC2 appliances
* [BGBUILD-118] Enable SElinux in guestfs
* [BGBUILD-80] VMware .tgz Bundle Should Expand Into Subdirectory, Not Current Directory
* [BGBUILD-113] Allow to specify supported file formats for operating system plugin
* [BGBUILD-73] Add support for kickstart files

v0.6.5

* Release bump required for plugins

v0.6.4

* [BGBUILD-98] Use hashery gem