@@ -9,6 +9,7 @@ v0.9.0
 * [BGBUILD-177] Fedora 13 builds have enabled firewall although they shouldn't have it
 * [BGBUILD-178] Remove sensitive data from logs
 * [BGBUILD-179] Boolean and numeric parameters in hash-like values are not recognized
+* [BGBUILD-176] Fail the build with appropriate message if any of post section commands fails to execute
 
 v0.8.1
 
